<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/bookIsbnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:maxLines="3" />

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/baseline_edit_24" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="TODO"
                android:src="@drawable/baseline_delete_24"
                tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

            </RelativeLayout>

            <TextView
                android:id="@+id/bookTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/bookAuthorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:fontFamily="@font/poppins"
                android:maxLines="20"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/courseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:fontFamily="@font/poppins"
                android:maxLines="20"
                android:layout_marginTop="4dp"/>


        </LinearLayout>

</androidx.cardview.widget.CardView>